[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Dash.gd" type="Script" id=1]
[ext_resource path="res://Effects/dot_particle.png" type="Texture" id=2]
[ext_resource path="res://Sound/cooldown_tick.ogg" type="AudioStream" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.269737, 0.973864 ), 0.0, 0.0899618, 0, 0, Vector2( 1, 0.0011363 ), -2.86234, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.42
angular_velocity = 50.0
angular_velocity_random = 0.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_curve = SubResource( 2 )

[node name="DashStuff" type="Node2D"]
script = ExtResource( 1 )

[node name="DashFrameTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DashParticles" type="Particles2D" parent="."]
modulate = Color( 0.18, 1.3, 1.5, 1 )
show_behind_parent = true
scale = Vector2( 4, 4 )
emitting = false
amount = 20
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="CooldownNotReadySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="DashFrameTimer" to="." method="_on_DashFrameTimer_timeout"]
